--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,8 @@ tokio = { version = "1.32.0", features = ["full"] }
 
 http = "0.2.9"
 httparse = "1.8.0"
+async-trait = "0.1.73"
+bytes = "1.4.0"
+
+thiserror = "1.0.47"
+anyhow = "1.0"
