feat: add `Endpoint` trait

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,11 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.32.0", features = ["full"] }
+hyper = { version = "1.0.0-rc.4", features = ["full"] }
+http-body-util = "0.1.0-rc.3"
+hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
+http-types = { version = "2.12.0", features = ["hyperium_http"] }
 
-http-types = "2.12.0"
 async-trait = "0.1.73"
 bytes = "1.4.0"
 serde = { version = "1.0.186", features = ["derive"] }
